--- a/IM.Common.Extensions/IM.Common.Extensions.csproj
+++ b/IM.Common.Extensions/IM.Common.Extensions.csproj
@@ -4,6 +4,10 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <PackageVersion>0.0.2</PackageVersion>
+        <Authors>ivan-man</Authors>
+        <PackageProjectUrl>https://github.com/ivan-man/IM.Common</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/ivan-man/IM.Common</RepositoryUrl>
     </PropertyGroup>
 
 </Project>
