--- a/IM.Common.Models/IM.Common.Models.csproj
+++ b/IM.Common.Models/IM.Common.Models.csproj
@@ -4,10 +4,14 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <PackageVersion>0.0.2</PackageVersion>
+        <PackageVersion>0.0.5</PackageVersion>
         <Authors>ivan-man</Authors>
         <PackageProjectUrl>https://github.com/ivan-man/IM.Common</PackageProjectUrl>
         <RepositoryUrl>https://github.com/ivan-man/IM.Common</RepositoryUrl>
     </PropertyGroup>
+
+    <ItemGroup>
+      <Folder Include="Domain" />
+    </ItemGroup>
 
 </Project>
