--- a/IM.Common.Models/IM.Common.Models.csproj
+++ b/IM.Common.Models/IM.Common.Models.csproj
@@ -4,7 +4,7 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <PackageVersion>0.0.8</PackageVersion>
+        <PackageVersion>0.0.9</PackageVersion>
         <Authors>ivan-man</Authors>
         <PackageProjectUrl>https://github.com/ivan-man/IM.Common</PackageProjectUrl>
         <RepositoryUrl>https://github.com/ivan-man/IM.Common</RepositoryUrl>
@@ -12,6 +12,7 @@
 
     <ItemGroup>
       <Folder Include="Domain" />
+      <Folder Include="PagedRequest" />
     </ItemGroup>
 
 </Project>
